<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:text="@string/objectColor"
                    android:textSize="20sp"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/objectColorView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:textSize="20sp"
                    android:text="@string/red" >
                </TextView>

                <SeekBar
                    android:id="@+id/redSeekBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dip" >
                </SeekBar>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:textSize="20sp"
                    android:text="@string/green" >
                </TextView>

                <SeekBar
                    android:id="@+id/greenSeekBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dip" >
                </SeekBar>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:textSize="20sp"
                    android:text="@string/blue" >
                </TextView>

                <SeekBar
                    android:id="@+id/blueSeekBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dip" >
                </SeekBar>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:textSize="20sp"
                    android:text="@string/alpha" >
                </TextView>

                <SeekBar
                    android:id="@+id/alphaSeekBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dip" >
                </SeekBar>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="20dip"
                android:text="@string/displayAxis"
                android:textSize="20sp"
                android:textStyle="bold" >
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:textSize="20sp"
                    android:text="@string/axes" >
                </TextView>

                <ToggleButton
                    android:id="@+id/axesToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </ToggleButton>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:textSize="20sp"
                    android:text="@string/grids" >
                </TextView>

                <ToggleButton
                    android:id="@+id/gridToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </ToggleButton>
            </LinearLayout>

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dip"
                android:textSize="20sp"
                android:text="@string/resetToDefault" >
            </Button>

            <Button
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:text="@string/closePreferences" >
            </Button>
        </LinearLayout>
    </ScrollView>

    <!-- <Button -->
    <!-- android:id="@+id/closeButton" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignParentBottom="true" -->
    <!-- android:layout_centerHorizontal="true" -->
    <!-- android:text="@string/closePreferences" > -->
    <!-- </Button> -->

</RelativeLayout>